<resources>
    <string name="app_name">SHouse</string>
    <string name="welcome">Welcome</string>
    <string name="enterMobile">Enter Your Mobile Number</string>
    <string name="mobile">Mobile Number</string>
    <string name="getOtp">Get OTP</string>
    <string name="otp">OTP</string>
    <string name="personalDetails">Personal Details</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email ID</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="pin">Pin Code</string>
    <string name="next">Next</string>
</resources>
