<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Auth.SignupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/quantify"
            android:textSize="42sp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/personalDetails"
            android:fontFamily="@font/raleway"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/black"
            />
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="12dp"
            android:inputType="text"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_person"
            android:background="@drawable/round_corner"
            android:hint="@string/fullName"
            android:autofillHints="@string/fullName"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_mail"
            android:background="@drawable/round_corner"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="12dp"
            android:inputType="text"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_home"
            android:background="@drawable/round_corner"
            android:hint="@string/address"
            android:autofillHints="@string/address"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="12dp"
            android:inputType="text"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_address"
            android:background="@drawable/round_corner"
            android:hint="@string/city"
            android:autofillHints="@string/city"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/pinEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="12dp"
            android:inputType="number"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_location"
            android:background="@drawable/round_corner"
            android:hint="@string/pin"
            android:autofillHints="@string/pin"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/actionBtnEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:drawableEnd="@drawable/ic_next"
            android:background="@drawable/round_button"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            android:textSize="16sp"
            android:textAlignment="center"
            />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>