<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Auth.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/welcome"
           android:layout_gravity="center_horizontal"
           android:fontFamily="@font/quantify"
           android:textSize="42sp"
           android:textColor="@android:color/black"
           />
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enterMobile"
            android:fontFamily="@font/raleway"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:textColor="@android:color/black"
            />
        <EditText
            android:id="@+id/mobileEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="12dp"
            android:inputType="number"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ic_phone"
            android:background="@drawable/round_corner"
            android:hint="@string/mobile"
            android:autofillHints="@string/enterMobile"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/otpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="12dp"
            android:inputType="number"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            android:drawableEnd="@drawable/ic_lock"
            android:background="@drawable/round_corner"
            android:hint="@string/otp"
            android:autofillHints="@string/otp"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/actionBtnEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/getOtp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:drawableEnd="@drawable/ic_next"
            android:background="@drawable/round_button"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            android:textSize="16sp"
            android:textAlignment="center"
            />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>